--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_API_URL = https://tuiter-node-server-app-7a6p.onrender.com/api
+REACT_APP_SERVER_API_URL=https://tuiter-node-server-app-7a6p.onrender.com/api
